--- a/indax2.html
+++ b/indax2.html
@@ -11,16 +11,17 @@
 <h3>this is many Photos about my brather and my famile</h3> 
 <div class="Brather"> 
     <p>my brather and my brather wife</p>
-    <img src="image/DSC_1646.jpg" alt="a">
+    <img src="DSC_1646.jpg" alt="a">
 </div>
 <div class="Brather"> <p>my brather and my mom</p>
-    <img src="image/mom.jpg" alt="b">
+    <img src="mom.jpg" alt="b">
 </div>
 <div class="Brather"> <p>my brather wife and my sisters</p>
-<img src="image/sister.jpg" alt="d">
+<img src="sister.jpg" alt="d">
 </div>
 <div class="Brather"> <p>this is my father</p>
-<img src="image/father.jpg" alt="c">
+<img src="father.jpg" alt="c">
 </div>    
 </body>
+
 </html>
